2009-03-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile: Move docs tarballs from Johan's home to mine.

2009-02-26  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add pybootchartgui

2009-02-25  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add jBrout, KeepNote, pyRenamer, Fricorder, Specto

2009-02-16  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add tutorial by serpia.com: PyGTK+Matplotlib

2009-02-09  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Freemix by Luis de Bethencourt

2009-01-21  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Facebook-notify

2009-01-16  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add BleachBit

2009-01-15  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Tablet apps

2009-01-08  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add gtkbuilder related articles by Micah Carrick
	* head.src, foot.src, feed.py, about.src, downloads.src, feedback.src,
	consulting.src, applications.src, developer.src:
	Fix some XHTML validation issues

2008-12-24  Rafael Villar Burke  <pachi@rvburke.com>

	* index.src: Fix typo

2008-12-13  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Remove Infogreater as it's no longer avaliable

2008-11-27  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Add TortoiseHG

2008-11-11  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Add Sqlkit by Alessandro Dentella

2008-10-28  Rafael Villar Burke  <pachi@rvburke.com>

	* consulting.src: Add Thomas Perl to the list

2008-09-24  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Add Gnome screenshot applet

2008-08-12  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Add gslimp3 URL

2008-08-05  Rafael Villar Burke  <pachi@rvburke.com>

	* application.src: Fix URL for GFCE Ultra

2008-07-04  Rafael Villar Burke  <pachi@rvburke.com>
