@@ -1,5 +1,9 @@
 2009-03-06  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	* newsitems.py: Advertise 2.14.1 release
+
+2009-03-06  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* Makefile: Move docs tarballs from Johan's home to mine.
 
 2009-02-26  Rafael Villar Burke  <pachi@rvburke.com>
